added porfolio projects and improved markdown formatting.

--- a/content/posts/my-first-post.mdx
+++ b/content/posts/my-first-post.mdx
@@ -1,6 +1,20 @@
 ---
-title: My first post
+title: What You Need to Know About the Amazon Builders' Library
 date: 2019-12-09
 ---
 
-This will be my very first post on this blog!
+### What is the Amazon Builders' Library?
+It is a collection of articles that describe how Amazon develops and operates software. 
+The content is written by Amazon’s senior technical leaders and engineers. As of December 2019, 
+there are only 13 articles, but more content is expected in the future. 
+
+### Why should you read the Builders’ Library?
+If you wonder how AWS automates software delivery to achieve over 150 million deployments a year, 
+then you should read the Builders' library. You may have other questions:  
+- How Amazon's engineer engineers implement principles such as shuffle sharding to build resilient 
+systems that are highly available and fault tolerant?
+- How AWS handles the complicated development and operations issues arising from distributed systems?
+- How to use static stability to achieve high resilience?
+And you may have many more questions.
+
+### An example: What I learned about Distributed Systems
