Added pages and updated portofolio cards.

--- a/content/posts/my-second-post.mdx
+++ b/content/posts/my-second-post.mdx
@@ -1,4 +1,8 @@
 ---
-title: Hello
+title: How to Get Started with Amazon DynamoDB
 date: 2019-12-10
 ---
+
+Amazon DynamoDB is a key-value and document database purpose built for single-digit millisecond 
+performance at any scale. It’s a fully managed, multiregion, multimaster database with built-in security, 
+backup and restore, and in-memory caching for internet-scale applications.
