--- a/content/posts/my-first-post.mdx
+++ b/content/posts/my-first-post.mdx
@@ -1,7 +1,10 @@
 ---
-title: What You Need to Know About the Amazon Builders' Library
+title: What You Need to Know About how Amazon Builds Software
 date: 2019-12-09
 ---
+
+Have you heard of the Amazon Builders' Library? I am assuming you have not because until 
+re:invent 2019, I hadn't heard either. 
 
 ### What is the Amazon Builders' Library?
 It is a collection of articles that describe how Amazon develops and operates software. 
@@ -17,4 +20,18 @@ systems that are highly available and fault tolerant?
 - How to use static stability to achieve high resilience?
 And you may have many more questions.
 
-### An example: What I learned about Distributed Systems
+### What I learned about Distributed Systems
+I learned about offline distributed systems, soft real-time distributed systems and hard real-time 
+distributed systems
+
+Offline distributed systems include batch processing systems, big data analysis clusters, movie scene rendering farms, 
+protein folding clusters, etc. 
+
+Soft real-time distributed systems include search index builders, systems that look for 
+impaired servers, roles for Amazon Elastic Compute Cloud (Amazon EC2), etc. A search indexer might be offline for 
+(depending on the application) from 10 minutes to many hours without undue customer impact. Roles for Amazon EC2 
+must push updated credentials to (essentially) every EC2 instance, but it has hours in which to do so because the 
+old credentials don’t expire for some time.
+
+Hard real-time distributed systems include front-end web servers, the order pipeline, credit card transactions, 
+every AWS API, telephony, etc. They are the hardest to implement. 
