Updated portfolio card texts.

--- a/content/posts/my-third-post.mdx
+++ b/content/posts/my-third-post.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to build secure cloud powered mobile apps
+title: How to Build Secure Cloud Powered Mobile Apps
 date: 2019-22-09
 ---
 
