Added info to blog 1.

--- a/content/posts/my-first-post.mdx
+++ b/content/posts/my-first-post.mdx
@@ -4,7 +4,7 @@ date: 2019-12-09
 ---
 
 Have you heard of the Amazon Builders' Library? I am assuming you have not because until 
-re:invent 2019, I hadn't heard either. 
+re:invent 2019, I hadn't heard of it either. 
 
 ### What is the Amazon Builders' Library?
 It is a collection of articles that describe how Amazon develops and operates software. 
@@ -14,7 +14,7 @@ there are only 13 articles, but more content is expected in the future.
 ### Why should you read the Builders’ Library?
 If you wonder how AWS automates software delivery to achieve over 150 million deployments a year, 
 then you should read the Builders' library. You may have other questions:  
-- How Amazon's engineer engineers implement principles such as shuffle sharding to build resilient 
+- How Amazon's engineer implement principles such as shuffle sharding to build resilient 
 systems that are highly available and fault tolerant?
 - How AWS handles the complicated development and operations issues arising from distributed systems?
 - How to use static stability to achieve high resilience?
@@ -35,3 +35,7 @@ old credentials don’t expire for some time.
 
 Hard real-time distributed systems include front-end web servers, the order pipeline, credit card transactions, 
 every AWS API, telephony, etc. They are the hardest to implement. 
+
+### Messaging is hard!
+Messaging sounds simple. Just send some info from one network to another. However, sending messages is where 
+everything starts getting difficult. 
